--- a/code/python/simple_regression/xgb_training.ipynb
+++ b/code/python/simple_regression/xgb_training.ipynb
@@ -16,9 +16,7 @@
     "\n",
     "from test_regression import test_regression\n",
     "\n",
-    "import xgboost as xgb\n",
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.svm import SVR"
+    "import xgboost as xgb"
    ]
   },
   {
@@ -35,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xgb_scores = test_regression(\n",
@@ -46,55 +46,49 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0090078415930045, 0.004394672953826942)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(xgb_scores), np.std(xgb_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "xgb_one_hot_scores = test_regression(\n",
-    "    [xgb.XGBRegressor() for i in range(5)], pool, one_hot=True\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.008429487341720544, 0.008001653792134694)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(xgb_scores), np.mean(xgb_one_hot_scores)"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.007193768478690833, 0.0033440772255714847)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(xgb_scores), np.std(xgb_one_hot_scores)"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
