Data agregation tests. Now only test vs uniform agregation works.

--- a/code/python/different_data_collection_types/uniform_test.ipynb
+++ b/code/python/different_data_collection_types/uniform_test.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,14 +12,14 @@
     "sys.path.append('../general')\n",
     "from pool import Pool\n",
     "\n",
-    "from test_regression import test_regression\n",
+    "from test_uniform_data_agregation import test_uniform_data_agregation\n",
     "\n",
     "from catboost import CatBoostRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,22 +30,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb_scores = test_regression(\n",
-    "    [CatBoostRegressor() for i in range(5)], pool\n",
+    "default_scores, uniform_scores = test_uniform_data_agregation(\n",
+    "    [CatBoostRegressor(verbose=False) for i in range(100)],\n",
+    "    [CatBoostRegressor(verbose=False) for i in range(100)],\n",
+    "    pool\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.00781590673020503, 0.006314064480826526)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.mean(xgb_scores), np.std(xgb_scores)"
+    "np.mean(default_scores), np.std(default_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.0003189196961392953, 0.00808630003937018)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(uniform_scores), np.std(uniform_scores)"
    ]
   },
   {
