Data aggregation tests. Uniform has lower quality but better benefit.

--- a/code/python/different_data_collection_types/uniform_test.ipynb
+++ b/code/python/different_data_collection_types/uniform_test.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -34,25 +36,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_scores, uniform_scores = test_uniform_data_agregation(\n",
-    "    [CatBoostRegressor(verbose=False) for i in range(100)],\n",
-    "    [CatBoostRegressor(verbose=False) for i in range(100)],\n",
-    "    pool\n",
+    "default_scores, uniform_scores, default_benefits, uniform_benefits = test_uniform_data_agregation(\n",
+    "    pool,\n",
+    "    [CatBoostRegressor(verbose=False) for i in range(10)],\n",
+    "    [CatBoostRegressor(verbose=False) for i in range(10)]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.00781590673020503, 0.006314064480826526)"
+       "(0.0075592876296319955, 0.006814213341130424)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,13 +65,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.017665334240816257, 0.0021336728259861585)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(default_benefits), np.std(default_benefits)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-0.0003189196961392953, 0.00808630003937018)"
+       "(-0.018960585884966547, 0.009435559042181752)"
       ]
      },
      "execution_count": 6,
@@ -79,6 +101,26 @@
    ],
    "source": [
     "np.mean(uniform_scores), np.std(uniform_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.9928580265899637e-06, 2.5338038545696647e-07)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(uniform_benefits), np.std(uniform_benefits)"
    ]
   },
   {
