Uniform data aggregation test. Greedy and max probability based classification.

--- a/code/python/different_data_collection_types/uniform_test.ipynb
+++ b/code/python/different_data_collection_types/uniform_test.ipynb
@@ -33,13 +33,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "default_scores, uniform_scores, default_benefits, uniform_benefits = test_uniform_data_agregation(\n",
     "    pool,\n",
-    "    [CatBoostRegressor(verbose=False) for i in range(10)],\n",
-    "    [CatBoostRegressor(verbose=False) for i in range(10)]\n",
+    "    [CatBoostRegressor(verbose=False) for i in range(50)],\n",
+    "    [CatBoostRegressor(verbose=False) for i in range(50)]\n",
     ")"
    ]
   },
@@ -51,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.0075592876296319955, 0.006814213341130424)"
+       "(0.007710115509394885, 0.006157581853667963)"
       ]
      },
      "execution_count": 4,
@@ -71,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "(-0.017665334240816257, 0.0021336728259861585)"
+       "(-0.01730279292428935, 0.0018704677255071056)"
       ]
      },
      "execution_count": 5,
@@ -91,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "(-0.018960585884966547, 0.009435559042181752)"
+       "(-0.016377022948166547, 0.009243426887089956)"
       ]
      },
      "execution_count": 6,
@@ -111,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "(-2.9928580265899637e-06, 2.5338038545696647e-07)"
+       "(-0.08194136374802548, 0.005826023174361424)"
       ]
      },
      "execution_count": 7,
