--- a/code/new_pool/utils/catboost_file_calculating.ipynb
+++ b/code/new_pool/utils/catboost_file_calculating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 22min 40s, sys: 33 s, total: 23min 13s\n",
-      "Wall time: 26min 45s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "json_filename = '../../../sorted_data/pool.json'\n",
@@ -65,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'../../../sorted_data/small_test'"
+    "%%time\n",
+    "days = get_days('../../../sorted_data/catboost_pool')"
    ]
   },
   {
