--- a/code/new_pool/utils/catboost_file_calculating.ipynb
+++ b/code/new_pool/utils/catboost_file_calculating.ipynb
@@ -211,38 +211,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wc: code/new_pool/utils/day_0.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_1.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_2.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_3.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_4.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_5.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_6.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_7.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_8.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_9.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_10.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_11.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_12.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_13.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_14.cbf: No such file or directory\n",
-      "wc: code/new_pool/utils/day_15.cbf: No such file or directory\n",
-      "CPU times: user 70.6 ms, sys: 73.2 ms, total: 144 ms\n",
-      "Wall time: 2.13 s\n"
+      "    114136  124749558 1988189002 day_0.cbf\n",
+      "    105003  114767189 1829209025 day_1.cbf\n",
+      "    106917  116860281 1861962929 day_2.cbf\n",
+      "    115364  126092852 2009144218 day_3.cbf\n",
+      "    106532  116439476 1855619246 day_4.cbf\n",
+      "    105077  114848071 1830067489 day_5.cbf\n",
+      "    107013  116965209 1863522456 day_6.cbf\n",
+      "     73503   80337689 1278045737 day_7.cbf\n",
+      "    109646  119843078 1909557363 day_8.cbf\n",
+      "    106493  116395759 1855546010 day_9.cbf\n",
+      "    105580  115397850 1838996680 day_10.cbf\n",
+      "    55290  60431970 960313423 day_11.cbf\n",
+      "    117314  128223112 2042882391 day_12.cbf\n",
+      "    101990  111473980 1777029688 day_13.cbf\n",
+      "    101987  111471791 1776925926 day_14.cbf\n",
+      "    102747  112302471 1789842872 day_15.cbf\n",
+      "CPU times: user 5.45 s, sys: 1.39 s, total: 6.85 s\n",
+      "Wall time: 5min 6s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "for i in range(16):\n",
-    "    !wc \"code/new_pool/utils/day_\"$i\".cbf\""
+    "    !wc \"day_\"$i\".cbf\""
    ]
   },
   {
