--- a/code/new_pool/notebooks/statistics.ipynb
+++ b/code/new_pool/notebooks/statistics.ipynb
@@ -71,35 +71,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pos: 0, metric: 5.228552172840028\n",
-      "pos: 1, metric: 5.225679990706257\n",
-      "pos: 2, metric: 10.041379000623559\n",
-      "pos: 3, metric: 9.903448595551149\n",
-      "pos: 4, metric: 9.72303347655017\n",
-      "pos: 5, metric: 7.943957562031259\n",
-      "pos: 6, metric: 7.330137600534361\n",
-      "pos: 7, metric: 10.023708720120187\n",
-      "pos: 8, metric: 8.999130399894653\n",
-      "pos: 9, metric: 9.046545984358245\n",
-      "pos: 100, metric: 1.1666666666666667\n"
+      "pos 0: 485356\n",
+      "pos 1: 375183\n",
+      "pos 2: 138713\n",
+      "pos 3: 116783\n",
+      "pos 4: 101322\n",
+      "pos 5: 111620\n",
+      "pos 6: 108327\n",
+      "pos 7: 68271\n",
+      "pos 8: 67771\n",
+      "pos 9: 61234\n",
+      "pos 100: 12\n"
      ]
     }
    ],
    "source": [
     "for pos in positions:\n",
-    "    print(\"pos: {}, metric: {}\".format(pos, np.mean(targets[pos] / probs[pos])))"
+    "    print(\"pos {}: {}\".format(pos, len(targets[pos])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objects_num = sum(len(targets[pos]) for pos in positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pos: 0, metric: 1.5525031129486409\n",
+      "pos: 1, metric: 1.1994346576718506\n",
+      "pos: 2, metric: 0.8521207771196089\n",
+      "pos: 3, metric: 0.7075493073098668\n",
+      "pos: 4, metric: 0.6026930254834334\n",
+      "pos: 5, metric: 0.542462304400076\n",
+      "pos: 6, metric: 0.48577982508973844\n",
+      "pos: 7, metric: 0.4186540849528967\n",
+      "pos: 8, metric: 0.37310843704805885\n",
+      "pos: 9, metric: 0.33889569801283304\n",
+      "pos: 100, metric: 8.564828409780545e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pos in positions:\n",
+    "    print(\"pos: {}, metric: {}\".format(pos, np.sum(targets[pos] / probs[pos]) / objects_num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
