--- a/code/new_pool/tests/load_results.ipynb
+++ b/code/new_pool/tests/load_results.ipynb
@@ -11,33 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'res/features_from_0_to_100/0-1.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-77838019126d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'res/features_from_0_to_100/0-1.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/lib/python3.6/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    370\u001b[0m     \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    371\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbasestring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 372\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    373\u001b[0m         \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mis_pathlib_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'res/features_from_0_to_100/0-1.txt'"
-     ]
-    }
-   ],
-   "source": [
-    "np.load('res/features_from_0_to_100/0-1.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=np.load('res/0_1_2_3_4_5_6_7_8_9_10_11_12-13.txt')"
+    "x = np.load('res/0-1.txt')"
    ]
   },
   {
@@ -48,26 +26,215 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.34679183, 1.34726257, 1.34185855, 1.34185855, 1.34185855,\n",
-       "        1.34185855, 1.34185855, 1.34185855, 1.34185855, 1.34185855],\n",
-       "       [0.99221661, 0.99232358, 0.98691957, 0.98691957, 0.98691957,\n",
-       "        0.98691957, 0.98691957, 0.98691957, 0.98691957, 0.98691957],\n",
-       "       [1.12664003, 1.12682104, 1.12141702, 1.12141702, 1.12141702,\n",
-       "        1.12141702, 1.12141702, 1.12141702, 1.12141702, 1.12141702],\n",
-       "       [1.23868916, 1.23915991, 1.23375589, 1.23375589, 1.23375589,\n",
-       "        1.23375589, 1.23375589, 1.23375589, 1.23375589, 1.23375589],\n",
-       "       [1.14568151, 1.14563843, 1.14023441, 1.14023441, 1.14023441,\n",
-       "        1.14023441, 1.14023441, 1.14023441, 1.14023441, 1.14023441],\n",
-       "       [1.04833548, 1.04881694, 1.04880305, 1.04880305, 1.04880305,\n",
-       "        1.04880305, 1.04880305, 1.04880305, 1.04880305, 1.04880305],\n",
-       "       [1.05533678, 1.05529371, 1.04988969, 1.04988969, 1.04988969,\n",
-       "        1.04988969, 1.04988969, 1.04988969, 1.04988969, 1.04988969],\n",
-       "       [1.06864647, 1.06912793, 1.06372391, 1.06372391, 1.06372391,\n",
-       "        1.06372391, 1.06372391, 1.06372391, 1.06372391, 1.06372391],\n",
-       "       [1.08513883, 1.08499336, 1.07958934, 1.07958934, 1.07958934,\n",
-       "        1.07958934, 1.07958934, 1.07958934, 1.07958934, 1.07958934],\n",
-       "       [1.08596151, 1.08597168, 1.08056767, 1.08056767, 1.08056767,\n",
-       "        1.08056767, 1.08056767, 1.08056767, 1.08056767, 1.08056767]])"
+       "array([[[0.02605771, 0.85745442, 0.01983891, 0.02575135, 0.03121979,\n",
+       "         0.01983891, 0.01983891],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728],\n",
+       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
+       "         0.01968728, 0.01968728]],\n",
+       "\n",
+       "       [[0.01278121, 0.93127939, 0.01076198, 0.01188051, 0.01177293,\n",
+       "         0.01076198, 0.01076198],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166],\n",
+       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
+       "         0.01076166, 0.01076166]],\n",
+       "\n",
+       "       [[0.04192829, 0.744077  , 0.03315332, 0.05928508, 0.05524966,\n",
+       "         0.03315332, 0.03315332],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324],\n",
+       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
+       "         0.03293324, 0.03293324]],\n",
+       "\n",
+       "       [[0.06389587, 0.6107288 , 0.04974907, 0.07120652, 0.1049216 ,\n",
+       "         0.04974907, 0.04974907],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432],\n",
+       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
+       "         0.04997432, 0.04997432]],\n",
+       "\n",
+       "       [[0.06406699, 0.6662271 , 0.04386662, 0.06326831, 0.07483776,\n",
+       "         0.04386662, 0.04386662],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974],\n",
+       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
+       "         0.04409974, 0.04409974]],\n",
+       "\n",
+       "       [[0.06318292, 0.6736549 , 0.04377321, 0.07892643, 0.05291612,\n",
+       "         0.04377321, 0.04377321],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374],\n",
+       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
+       "         0.04400374, 0.04400374]],\n",
+       "\n",
+       "       [[0.04111616, 0.74722544, 0.03392432, 0.05608356, 0.05380187,\n",
+       "         0.03392432, 0.03392432],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631],\n",
+       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
+       "         0.03413631, 0.03413631]],\n",
+       "\n",
+       "       [[0.03786036, 0.78513433, 0.02940957, 0.04461547, 0.04416114,\n",
+       "         0.02940957, 0.02940957],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882],\n",
+       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
+       "         0.02940882, 0.02940882]],\n",
+       "\n",
+       "       [[0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306],\n",
+       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
+       "         0.05267306, 0.05267306]],\n",
+       "\n",
+       "       [[0.05616979, 0.66013543, 0.04315136, 0.08301944, 0.07122126,\n",
+       "         0.04315136, 0.04315136],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041],\n",
+       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
+       "         0.04315041, 0.04315041]]])"
       ]
      },
      "execution_count": 8,
@@ -81,22 +248,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10, 10)"
+       "(10, 10, 7)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.shape(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(np.argmax(x, axis=-1), axis=-1)"
    ]
   },
   {
