Different evaluation types

--- a/code/new_pool/tests/load_results.ipynb
+++ b/code/new_pool/tests/load_results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,221 +20,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.02605771, 0.85745442, 0.01983891, 0.02575135, 0.03121979,\n",
-       "         0.01983891, 0.01983891],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728],\n",
-       "        [0.02585805, 0.85854488, 0.01968728, 0.02555432, 0.03098092,\n",
-       "         0.01968728, 0.01968728]],\n",
+       "(2, 10, 7)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(np.shape(x)[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.02007608, 0.8795435 , 0.02007608, 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.8795435 , 0.02007608, 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.8795435 , 0.02007608, 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.8795435 , 0.02007608, 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02021818, 0.87852416, 0.02038492, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.87852416, 0.02038492, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.87852416, 0.02038492, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.87852416, 0.02038492, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.87852416, 0.02038492, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.87852416, 0.02038492, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818]],\n",
        "\n",
-       "       [[0.01278121, 0.93127939, 0.01076198, 0.01188051, 0.01177293,\n",
-       "         0.01076198, 0.01076198],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166],\n",
-       "        [0.01278083, 0.93128132, 0.01076166, 0.01188028, 0.01177258,\n",
-       "         0.01076166, 0.01076166]],\n",
-       "\n",
-       "       [[0.04192829, 0.744077  , 0.03315332, 0.05928508, 0.05524966,\n",
-       "         0.03315332, 0.03315332],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324],\n",
-       "        [0.04164915, 0.74577765, 0.03293324, 0.05889104, 0.05488244,\n",
-       "         0.03293324, 0.03293324]],\n",
-       "\n",
-       "       [[0.06389587, 0.6107288 , 0.04974907, 0.07120652, 0.1049216 ,\n",
-       "         0.04974907, 0.04974907],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432],\n",
-       "        [0.06418514, 0.60798388, 0.04997432, 0.07152727, 0.10638076,\n",
-       "         0.04997432, 0.04997432]],\n",
-       "\n",
-       "       [[0.06406699, 0.6662271 , 0.04386662, 0.06326831, 0.07483776,\n",
-       "         0.04386662, 0.04386662],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974],\n",
-       "        [0.06440745, 0.66375225, 0.04409974, 0.06360308, 0.07593798,\n",
-       "         0.04409974, 0.04409974]],\n",
-       "\n",
-       "       [[0.06318292, 0.6736549 , 0.04377321, 0.07892643, 0.05291612,\n",
-       "         0.04377321, 0.04377321],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374],\n",
-       "        [0.06351634, 0.6712    , 0.04400374, 0.08007887, 0.05319356,\n",
-       "         0.04400374, 0.04400374]],\n",
-       "\n",
-       "       [[0.04111616, 0.74722544, 0.03392432, 0.05608356, 0.05380187,\n",
-       "         0.03392432, 0.03392432],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631],\n",
-       "        [0.04137308, 0.74514168, 0.03413631, 0.05643272, 0.05464358,\n",
-       "         0.03413631, 0.03413631]],\n",
-       "\n",
-       "       [[0.03786036, 0.78513433, 0.02940957, 0.04461547, 0.04416114,\n",
-       "         0.02940957, 0.02940957],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882],\n",
-       "        [0.03785939, 0.78513935, 0.02940882, 0.04461481, 0.04416   ,\n",
-       "         0.02940882, 0.02940882]],\n",
-       "\n",
-       "       [[0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306],\n",
-       "        [0.08560338, 0.57773768, 0.05267306, 0.0931117 , 0.08552807,\n",
-       "         0.05267306, 0.05267306]],\n",
-       "\n",
-       "       [[0.05616979, 0.66013543, 0.04315136, 0.08301944, 0.07122126,\n",
-       "         0.04315136, 0.04315136],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041],\n",
-       "        [0.05616855, 0.66014203, 0.04315041, 0.08301851, 0.07121968,\n",
-       "         0.04315041, 0.04315041]]])"
+       "       [[0.02021818, 0.02038492, 0.87852416, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.02038492, 0.87852416, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.02038492, 0.87852416, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02021818, 0.02038492, 0.87852416, 0.02021818, 0.02021818,\n",
+       "         0.02021818, 0.02021818],\n",
+       "        [0.02007608, 0.02007608, 0.8795435 , 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.02007608, 0.8795435 , 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.02007608, 0.8795435 , 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.02007608, 0.8795435 , 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.02007608, 0.8795435 , 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608],\n",
+       "        [0.02007608, 0.02007608, 0.8795435 , 0.02007608, 0.02007608,\n",
+       "         0.02007608, 0.02007608]]])"
       ]
      },
      "execution_count": 8,
@@ -248,42 +122,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 10, 7)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.shape(x)"
+    "repeated_arange = np.repeat(\n",
+    "    [np.repeat([np.arange(np.shape(x)[2])], np.shape(x)[1], axis=0)],\n",
+    "    np.shape(x)[0],\n",
+    "    axis=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+       "array([[1.28106517, 1.28106517, 1.28106517, 1.28106517, 1.28322132,\n",
+       "        1.28322132, 1.28322132, 1.28322132, 1.28322132, 1.28322132],\n",
+       "       [2.14136056, 2.14136056, 2.14136056, 2.14136056, 2.14053259,\n",
+       "        2.14053259, 2.14053259, 2.14053259, 2.14053259, 2.14053259]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.argmax(np.argmax(x, axis=-1), axis=-1)"
+    "np.sum(repeated_arange * x, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [2., 2., 2., 2., 2., 2., 2., 2., 2., 2.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(np.sum(repeated_arange * x, axis=-1))"
    ]
   },
   {
