--- a/code/python/small_data_analysis/baseline.ipynb
+++ b/code/python/small_data_analysis/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,9 @@
     "import os\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"code/python/utils/\")\n",
-    "sys.path.append(\"code/python/calculating_predictions\")\n",
-    "sys.path.append(\"code/python/evaluation/\")\n",
+    "sys.path.append(\"../utils/\")\n",
+    "sys.path.append(\"../calculating_predictions\")\n",
+    "sys.path.append(\"../evaluation/\")\n",
     "from calculate_predictions import calculate_predictions\n",
     "from evaluate import evaluate\n",
     "from run_evaluation import *\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    args.verbose = True\n",
     "    args.first_feature = 0\n",
     "    args.last_feature = -1\n",
-    "    args.data_folder = \"data/best_features_days_data/\"\n",
+    "    args.data_folder = \"../../../data/best_features_days_data/\"\n",
     "    args.out_folder = \"res\"\n",
     "    args.type = \"regression\"\n",
     "    args.metric_folder = \"metrics\"\n",
