Looking for the best train days set.

--- a/code/python/small_data_analysis/baseline.ipynb
+++ b/code/python/small_data_analysis/baseline.ipynb
@@ -66,9 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.622552224779459, 0.6084019246234298, 0.6001719741512457, 0.6035806440807945, 0.6410533974448633, 0.635420558829577, 0.6387686172565953, 0.6080499032464564, 0.6055790911555483, 0.6386901600445535, 0.6724322107183247, 0.619606495315432, 0.6275450725643599, 0.6082089581695699, 0.6151517057685155]\n",
+      "0.6230141958765816\n",
+      "0.018920250879526538\n"
+     ]
+    }
+   ],
    "source": [
     "print(no_val_metrics)\n",
     "print(np.mean(no_val_metrics))\n",
@@ -77,9 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.6361418544809591, 0.6109498263235139, 0.5756743203725229, 0.6606114715258377, 0.6322742158854051, 0.6070590707340403, 0.629777940796023, 0.6299392332497199, 0.5950429452486984, 0.6074039085046664, 0.610024716177584, 0.6446146106102801, 0.6186540187640717, 0.6250432260994494, 0.6128655233957128]\n",
+      "0.6197384588112324\n",
+      "0.02005503270737271\n"
+     ]
+    }
+   ],
    "source": [
     "print(val_metrics)\n",
     "print(np.mean(val_metrics))\n",
@@ -88,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +527,17 @@
       "\"2018-06-18 01:38:19.065587\": train features shape: (67567, 80)\n",
       "\"2018-06-18 01:38:19.168224\": preprocesing finished\n",
       "\"2018-06-18 01:38:19.168280\": start training on days [0, 1, 2]\n",
-      "\"2018-06-18 01:38:19.168377\": using fit with validation\n"
+      "\"2018-06-18 01:38:19.168377\": using fit with validation\n",
+      "\"2018-06-18 01:39:05.503848\": built 1068 trees\n",
+      "\"2018-06-18 01:39:05.503960\": start predicting on day 6\n",
+      "\"2018-06-18 01:39:19.667692\": saveing results\n",
+      "\"2018-06-18 01:39:19.675821\": results saved\n",
+      "\"2018-06-18 01:39:19.680187\": predictions_filenames: ['res/train_0_1_2_test_6.npy']\n",
+      "\"2018-06-18 01:39:19.680235\": will evaluate days: [6]\n",
+      "\"2018-06-18 01:39:19.680428\": predict on file \"res/train_0_1_2_test_6.npy\"\n",
+      "\"2018-06-18 01:39:21.606597\": calculating metric\n",
+      "CPU times: user 1h 31min 35s, sys: 4min 4s, total: 1h 35min 40s\n",
+      "Wall time: 18min 4s\n"
      ]
     }
    ],
