Stacking does not give improvement

--- a/code/python/small_data_analysis/baseline.ipynb
+++ b/code/python/small_data_analysis/baseline.ipynb
@@ -39,7 +39,7 @@
     "    args.out_folder = \"res\"\n",
     "    args.type = \"regression\"\n",
     "    args.metric_folder = \"metrics\"\n",
-    "    args.model_constructor=lambda verbose: CatBoostRegressor(verbose=verbose)\n",
+    "    args.model_constructor = lambda verbose: CatBoostRegressor(verbose=verbose)\n",
     "    args.additional_features = None\n",
     "    args.train_days = [0, 1, 2]\n",
     "    if need_validation:\n",
